added context menu to delete index files only